# market-auto-trader

./: .env.example  .gitignore  AGENTS.md  CRON_CONTEXT.md  DISCLAIMER.md  Dockerfile  README.md  README_EN.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run_gate_backtest.py  run_kr_backtest.py  run_optimization.py  run_us_backtest.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  (+3 more)
config/: __init__.py  backtest.py  portfolio.py  settings.py  trading.py
docs/: PHASE4_PLAN.md  architecture.md
memory/: backtest-history.json
scripts/: backtest_profile_comparison.py
src/: __init__.py  db.py  exceptions.py  main.py
tests/: conftest.py  test_alert_manager.py  test_alerts_api.py  test_auto_trader.py  test_auto_trader_scheduler.py  test_backtest_api.py  test_backtest_data_loader.py  test_backtest_engine.py  test_backtest_sentiment_per.py  test_bollinger_bands.py  test_broker.py  test_cache.py  test_collector.py  test_config.py  test_dashboard.py  test_data_pipeline_api.py  test_discord_notifier.py  test_exceptions.py  test_health.py  test_health_api.py  test_historical_per.py  test_historical_sentiment.py  test_hybrid_sentiment.py  test_integration.py  test_market_profile.py  test_mem0.py  test_news_api.py  test_news_collector.py  test_news_sentiment.py  test_oneshot_overseas_strategy.py  test_oneshot_sell.py  test_oneshot_strategy.py  test_optimizer.py  test_orders.py  test_orders_api.py  test_overseas_broker.py  test_overseas_orders_api.py  test_pipeline.py  test_portfolio.py  test_portfolio_config.py  (+22 more)
(+70 files in other folders)
